--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
     "mongoose": "^5.9.4",
