--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI='mongodb+srv://voducdan:voducdantiep.1@cluster0-oduju.mongodb.net/Shopping-e-commerce-app?retryWrites=true&w=majority'
+PORT=3000
